Transfer rpc, add supported currency to db
